updated position on home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
   
 <title>Vasu Raman</title>
-<meta name="Vasu Raman is a postdoctoral scholar at Caltech working on autonomous cyber-physical systems." content="" />
+<meta name="Vasu Raman is a Senior Scientist at UTRC." content="" />
 <meta name="google-site-verification" content="-7qZnnAWS5Dp4S7IMyEi_Xs3WGrOBs9PqF0z1d5eYks" />
 
 <link href="style.css" rel="stylesheet" type="text/css" />
@@ -53,8 +53,8 @@
     <tr>      
       <td width="30%" align="center"><img src="vasu_resize.jpg"></td>
       <td>
-	 I am a <a href="http://www.cms.caltech.edu/">Computing and Mathematical Sciences</a> postdoctoral scholar at the <a href="http://www.caltech.edu/">California Institute of Technology</a>,
-	 where I work with <a href="http://www.cds.caltech.edu/~murray/">Richard Murray</a> and <a href="http://www.eecs.berkeley.edu/~sseshia/">Sanjit Seshia</a>.
+	 I am a Senior Scientist at the United Technologies Research Center in Berkeley, CA. I was previously a <a href="http://www.cms.caltech.edu/">Computing and Mathematical Sciences</a> postdoctoral scholar at the <a href="http://www.caltech.edu/">California Institute of Technology</a>,
+	 where I worked with <a href="http://www.cds.caltech.edu/~murray/">Richard Murray</a> and <a href="http://www.eecs.berkeley.edu/~sseshia/">Sanjit Seshia</a>.
 	 <p>
 	 <!--My research explores algorithmic methods for designing and controlling autonomous systems, combining ideas from hybrid systems and software verification
 	 to guarantee correctness with respect to a formal specification. I focus on safety-critical
