updated with latest pubs

--- a/projects.html
+++ b/projects.html
@@ -43,15 +43,6 @@
 
 <h2>Key Research Projects</h2>
 <table border=0 width=100%>
-<tr class="spaceUnder">
-  <td>
-<a name="multirobot"><h3>Provably Correct Control for Collaborative Robot Teams</h3></a>
-The goal of this project is to synthesize centralized and decentralized controllers that guarantee safe execution and goal fulfilment for complex cooperative tasks
-involving teams of robots. This is ongoing work in collaboration with researchers at Cornell University, The University of Southern California, and the University of Pennsylvania.<br>
-<u>Relevant publications:</u> <b><a href = "papers/vraman_icra_14.pdf"target="blank">[ICRA14]</a> <a href = "papers/vraman_iros_14.pdf"target="blank">[IROS14]</a></b>
-  </td>
-  <td width="45%" align="center"><img src="figures/multirobot.png"></td>      
-</tr>
 
 <tr class="spaceUnder">
   <td>
@@ -60,9 +51,20 @@ The goal of this project is a framework for posing model-predictive control prob
 This work is motivated by a smart micro-grid or building-level power system, with controllable loads and generators, and desired guarantees on timed properties
 such as the maximum period of power loss to critical loads in case of failure or outages. This is an ongoing project in collaboration with researchers at the
 University of California at Berkeley.<br>
-<u>Relevant publications:</u> <b><a href="papers/vraman_hscc_15.pdf">[HSCC15]</a> <a href = "papers/vraman_cdc_14.pdf"target="blank">[CDC14]</a> <a href = "papers/vraman_cyphy_14.pdf"target="blank">[CyPhy14]</a></b>
+<u>Relevant publications:</u> <b><a href="papers/vraman_adhs_15.pdf">[ADHS15]</a> <a href="papers/vraman_hscc_15.pdf">[HSCC15]</a> <a href = "papers/vraman_cdc_14.pdf"target="blank">[CDC14]</a> <a href = "papers/vraman_cyphy_14.pdf"target="blank">[CyPhy14]</a></b>
   </td>
   <td width="45%" align="center"><img src="figures/stl_mpc.png"></td>   
+  </tr>
+
+  
+<tr class="spaceUnder">
+  <td>
+  <a name="rhc"><h3>Scaling Receding Horizon Control Synthesis for LTL</h3></a>
+The goal of this project is to improve the scalability of synthesis of reactive hybrid controllers from Linear Temporal Logic specifications in the GR(1) fragment. 
+This work is motivated by large road networks of autonomous vehicles, which much plan in a receding horizon fashion, while adhering to comolicated high-level decision-making specifications. This is an ongoing project in collaboration with researchers in Singapore and Sweden.<br>
+<u>Relevant publications:</u> <b><a href="papers/vraman_iros_15.pdf">[IROS15]</a> <a href="papers/vraman_acc_15.pdf">[ACC15]</a></b>
+  </td>
+  <td width="45%" align="center"><img width="65%" src="figures/rhc.png"></td>   
 </tr>
 
 <tr class="spaceUnder">
@@ -80,7 +82,7 @@ Joint work with Nir Piterman, Cameron Finucane and Hadas Kress-Gazit.<br>
 <a name="unsynth"><h3>Explaining Unsynthesizable Specifications For High-Level Robot Behavior</h3></a>
 This project aims to find suitable explanations of unsynthesizable LTL specifications in the robot control domain, by exploiting the structure of the problem and using existing and novel techniques in formal methods. It also proposes an interactive game for demonstrating environment winning strategies, based on existing techniques for explaining unrealizability, in which the user attempts to fulfill the robot specification against an adversarial environment. The algorithm and game are implemented as features within the LTLMoP toolkit for robot mission planning.<br>
 Joint work with Hadas Kress-Gazit.<br>
-<u>Relevant publications:</u> <b><a href = "papers/vraman_cav_11.pdf"target="blank">[CAV11]</a> <a href = "papers/vraman_icra_12.pdf"target="blank">[ICRA12]</a> <a href = "papers/vraman_tro_13.pdf"target="blank">[TRO13]</a> <a href = "papers/vraman_rss_13.pdf"target="blank">[RSS13]</a> <a href = "papers/vraman_iros_13.pdf"target="blank">[IROS13]</a> <a href = "papers/vraman_synt_14.pdf"target="blank">[SYNT13]</a></b>
+<u>Relevant publications:</u> <b><a href = "papers/vraman_cav_11.pdf"target="blank">[CAV11]</a> <a href = "papers/vraman_icra_12.pdf"target="blank">[ICRA12]</a> <a href = "papers/vraman_tro_13.pdf"target="blank">[TRO13]</a> <a href = "papers/vraman_rss_13.pdf"target="blank">[RSS13]</a> <a href = "papers/vraman_iros_13.pdf"target="blank">[IROS13]</a> <a href = "papers/vraman_synt_14.pdf"target="blank">[SYNT14]</a></b>
   </td>
   <td width="45%" align="center"><img src="figures/feedback.png"></td>   
 </tr>
