updated home page

--- a/index.html
+++ b/index.html
@@ -90,27 +90,27 @@
     <br>
       <div id="news">
 	<h3>News</h3>
-	  <li> <b>June 23-26: </b> Lecturing on <i>Synthesis for Robotics</i> at the <a href="https://excape.cis.upenn.edu/summer-school.html">ExCAPE Summer School on Synthesis</a>.
+	<ul>
+	 <li> <b>Dec 21: </b>Paper accepted at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
+	</ul>
+	<i>Recent:</i>
+	<ul>
+	   <li> <b>June 23-26: </b> Lecturing on <i>Synthesis for Robotics</i> at the <a href="https://excape.cis.upenn.edu/summer-school.html">ExCAPE Summer School on Synthesis</a>.
 	  <li> <b>Mar 31: </b> Teaching the Caltech <a href="me132b.html">Advanced Robotics</a> course this term.
 	  <li> <b>Mar 15: </b> <span style="font-size:12pt; font-style:italic; color:red">New software! </span><a href="https://github.com/BluSTL/BluSTL/">BluSTL v0.1</a> released.
+	  <!--
 	  <li> <b>Mar 6: </b><a href="http://absynth2015.github.io/">Workshop</a> accepted at <a href="http://www.roboticsconference.org/">RSS 2015</a> in Rome, Italy.
-	
-	<ul>
-	  </ul>
-	  <i>Recent:</i>
-	  <ul>
 	  <li> <b>Apr 14-16: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">HSCC 2015</a> in Seattle, WA.
 	  <li> <b>Apr 13: </b> Gave a highlight talk at the <a href="http://cps-vo.org/group/CPSEarlyCareerInvestigators2015/">NSF Early-Career Investigators Workshop on CPS & Smart City</a>.
 	  <li> <b>Jan 30: </b>Paper accepted at <a href="http://icra2015.org/">ICRA 2015</a> in Seattle, WA.
 	  <li> <b>Jan 17: </b>Paper with summer student Mattias F&auml;lt accepted at <a href="http://acc2015.a2c2.org/">ACC 2015</a> in Chicago, IL.
-	  
-	  <!-- <li> <b>Jan 25-30: </b>Presented at <a href="http://www.aaai.org/Conferences/AAAI/aaai15.php">AAAI</a> in Austin, TX.
+	  <li> <b>Jan 25-30: </b>Presented at <a href="http://www.aaai.org/Conferences/AAAI/aaai15.php">AAAI</a> in Austin, TX.
 	  <li> <b>Dec 15-17: </b><a href="talks/vraman_talk_cdc14.pdf">Presented</a> at <a href="http://control.disp.uniroma2.it/CDC2014/index.php">CDC 2014</a> in Los Angeles, CA. 
 	  <li> <b>Oct 15: </b>The <a href = "http://www.fmrchallenge.org/">First Challenge on Formal Methods for Robotics</a> has been accepted to <a href="http://icra2015.org/">ICRA 2015</a>!
 	  <li> <b>Sept 20-27: </b> Attended the <a href ="http://www.heidelberg-laureate-forum.org/event_2014/">2nd Heidelberg Laureate Forum</a>.
 	  <li> <b>Oct 29-30: </b>Attending the <a href="http://www.terraswarm.org/conferences/14/annual/index.htm">TerraSwarm Annual Meeting</a> in Berkeley, CA.-->
 	  	  
-	  </ul>
+	 </ul>
       </div>
       <br>
     <a name="pubs"></a>
@@ -145,6 +145,8 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 
 <h3>Conference Publications</h3>
 <ul>
+            <li>S. Ghosh, D. Sadigh, P. Nuzzo, <u>V. Raman</u>, A. Donz{\'e}, A. Sangiovanni-Vincentelli, S. S. Sastry, S. A. Seshia, <b>Diagnosis and Repair for Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2016</i> (to appear).
+	      <a href="">[pdf]</a>
 
             <li>J. DeCastro, J. Alonso-Mora, <u>V. Raman</u>, D. Rus, H. Kress-Gazit, <b>Collision-Free Reactive Mission and Motion Planning for Multi-Robot Systems</b>, <i>ISRR 2015</i>.
 	      <a href="papers/vraman_isrr_15.pdf">[pdf]</a>
@@ -283,7 +285,7 @@ I also have a somewhat significant history with College Mock Trial.
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2014 Vasumathi Raman.  Last updated March 16, 2015.</p>
+		<p>&copy; 2015 Vasumathi Raman.  Last updated December 22, 2015.</p>
 	</div>
    </body>
 </html>
