updated contact info

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <td><h1><a href="index.html">Vasu Raman</a></h1></td>
 	<td align="right">
 	  <b><font size="6"><a href="vraman_CV.pdf"target="blank">[CV]</a></font></b>
-	  [vasu AT caltech DOT edu]
+	  [vasumathi.raman AT gmail]
 	</td>
       </tr>
     </table>
@@ -38,18 +38,14 @@
 <div id="content">
   <table cellpadding=5>
     <tr>
-      Department of Computing and Mathematical Sciences<br>
-      California Institute of Technology<br>
-      1200 E California Blvd, Mail Code 305-16<br>
-      Pasadena, CA 91125<br>
       Phone: +1 607 216-8623<br>
-      Email: vasu AT caltech DOT edu
+      Email: vasumathi.raman AT gmail DOT com
     </tr>
 
     </table>
 </div>
 	<div id="footer">
-		<p>&copy; 2014 Vasumathi Raman.  Last updated October 25, 2014.</p>
+		<p>&copy; 2015 Vasumathi Raman.  Last updated December 22, 2015.</p>
 	</div>
 </div>
 </body>
