--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         <td><h1><a href="index.html">Vasu Raman</a></h1></td>
 	<td align="right">
 	   <b><font size="6"><a href="vraman_CV.pdf"target="blank">[CV]</a></font></b>
-		[vasu AT caltech DOT edu]
+		[vasumathi.raman AT gmail]
 	 </td>
       </tr>
     </table>
@@ -141,7 +141,7 @@ This project aimed to uncover guidelines for producing more compelling, low-cost
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2014 Vasumathi Raman.  Last updated October 25, 2014.</p>
+		<p>&copy; 2015 Vasumathi Raman.  Last updated December 22, 2015.</p>
 	</div>
 </div>
 </body>
