--- a/phdthesis.html
+++ b/phdthesis.html
@@ -20,7 +20,7 @@
         <td><h1><a href="index.html">Vasu Raman</a></h1></td>
 	<td align="right">
 	  <b><font size="6"><a href="vraman_CV.pdf"target="blank">[CV]</a></font></b>
-	  [vasu AT caltech DOT edu]
+	  [vasumathi.raman AT gmail]
 	</td>
       </tr>
     </table>
@@ -66,7 +66,7 @@ The third problem addressed is the definition of an appropriate <i>timing semant
 
 	</div>
 	<div id="footer">
-		<p>&copy; 2014 Vasumathi Raman.  Last updated October 25, 2014.</p>
+		<p>&copy; 2015 Vasumathi Raman.  Last updated December 22, 2015.</p>
 	</div>
 </div>
 </body>
