updates to current projects

--- a/projects.html
+++ b/projects.html
@@ -43,20 +43,27 @@
 
 <h2>Key Research Projects</h2>
 <table border=0 width=100%>
-
 <tr class="spaceUnder">
   <td>
   <a name="stl2mpc"><h3>Model Predictive Control Synthesis from Timed Logics</h3></a>
-The goal of this project is a framework for posing model-predictive control problems as synthesis from specifications in signal temporal logic.
-This work is motivated by a smart micro-grid or building-level power system, with controllable loads and generators, and desired guarantees on timed properties
-such as the maximum period of power loss to critical loads in case of failure or outages. This is an ongoing project in collaboration with researchers at the
-University of California at Berkeley.<br>
-<u>Relevant publications:</u> <b><a href="papers/vraman_adhs_15.pdf">[ADHS15]</a> <a href="papers/vraman_hscc_15.pdf">[HSCC15]</a> <a href = "papers/vraman_cdc_14.pdf"target="blank">[CDC14]</a> <a href = "papers/vraman_cyphy_14.pdf"target="blank">[CyPhy14]</a></b>
+  With colleages at UC Berkeley, I have created a framework for posing  model-predictive control tasks as synthesis from signal temporal logic specifications.
+  Motivating case studies include smart building-level (“micro-grid”) power systems with controllable loads and generators, and desired timed properties
+  such as the maximum period of power loss during failures or outages.<br>
+    <u>Relevant publications:</u> <b><a href="papers/vraman_adhs_15.pdf">[ADHS15]</a> <a href="papers/vraman_hscc_15.pdf">[HSCC15]</a> <a href = "papers/vraman_cdc_14.pdf"target="blank">[CDC14]</a> <a href = "papers/vraman_cyphy_14.pdf"target="blank">[CyPhy14]</a></b>
   </td>
-  <td width="45%" align="center"><img src="figures/stl_mpc.png"></td>   
+  <td width="45%" align="center"><img width="95%" src="figures/hvac_nondet.png"></td>   
   </tr>
 
-  
+<tr class="spaceUnder">
+  <td>
+    <a name="multirobot"><h3>Provably Correct Control for Collaborative Robot Teams</h3></a>
+    In ongoing work with colleagues at Cornell University, USC and MIT, I am working on various methods for synthesizing centralized and decentralized controllers
+    that guarantee safe execution and goal fulfillment for complex tasks involving teams of robots.<br>
+      <u>Relevant publications:</u> <b> <a href = "papers/vraman_icra_14.pdf"target="blank">[ISRR15]</a> <a href = "papers/vraman_iros_14.pdf"target="blank">[IROS14]</a> <a href = "papers/vraman_icra_14.pdf"target="blank">[ICRA14]</a></b>
+    </td>
+  <td width="45%" align="center"><img width="80%" src="figures/2d-avoid-bright.jpg"></td>
+  </tr>
+
 <tr class="spaceUnder">
   <td>
   <a name="rhc"><h3>Scaling Receding Horizon Control Synthesis for LTL</h3></a>
@@ -64,7 +71,7 @@ The goal of this project is to improve the scalability of synthesis of reactive 
 This work is motivated by large road networks of autonomous vehicles, which much plan in a receding horizon fashion, while adhering to comolicated high-level decision-making specifications. This is an ongoing project in collaboration with researchers in Singapore and Sweden.<br>
 <u>Relevant publications:</u> <b><a href="papers/vraman_iros_15.pdf">[IROS15]</a> <a href="papers/vraman_acc_15.pdf">[ACC15]</a></b>
   </td>
-  <td width="45%" align="center"><img width="65%" src="figures/rhc.png"></td>   
+  <td width="45%" align="center"><img width="50%" src="figures/rhc.png"></td>   
 </tr>
 
 <tr class="spaceUnder">
@@ -88,7 +95,10 @@ Joint work with Hadas Kress-Gazit.<br>
 </tr>
 
 </table>
-
+<br>
+<br>
+<br>
+<h2>Older Projects</h2>
 <table>  
 <tr class="spaceUnder">
   <td>
@@ -112,7 +122,7 @@ Joint work with Joseph Halpern, Rafael Pass and Bart Selman.
 <h3>Learning Primitive Predicates for Probabilistic Planning</h3>
 The goal of this project was to create a bootstrapping framework for probabilistic planing using supervised learning of task-specific primitive predicates. To this end, I proposed features for learning the predicate ``on" in the Blocks World domain, for the task of stacking blocks, and designed and conducted user studies to collect a dataset for supervised learning of the concept of ``on". I then modified an existing planner to use the learned definitions of ``on", and evaluated performance against a set of commonly used definitions.
 <br>
-This work was part of my senior honors thesis in 2007, co-advised by Leslie Kaelbling (MIT) and Ellen Hildreth (Wellesley College)
+This work was part of my senior honors thesis in 2007, co-advised by Leslie Kaelbling (MIT) and Ellen Hildreth (Wellesley College).
   </td>
 </tr>
 
@@ -141,7 +151,7 @@ This project aimed to uncover guidelines for producing more compelling, low-cost
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2015 Vasumathi Raman.  Last updated December 22, 2015.</p>
+		<p>&copy; 2016 Vasumathi Raman.  Last updated January 19, 2016.</p>
 	</div>
 </div>
 </body>
