--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <h3>Key Research Projects</h3>
     <ul>
       <li><a href="projects.html#stl2mpc" target="blank">Model Predictive Control Synthesis from Timed Logics</a></li>
-       <li><a href="projects.html#rhc" target="blank">Scaling Receding Horizon Control Synthesis for LTL</a></li>
       <li><a href="projects.html#multirobot" target="blank">Provably Correct Control for Collaborative Robot Teams</a></li>
+      <li><a href="projects.html#rhc" target="blank">Scaling Receding Horizon Control Synthesis for LTL</a></li>
       <li><a href="projects.html#fastslow" target="blank">Timing Semantics for Controller Synthesis from High-Level Specifications</a></li>
       <li><a href="projects.html#unsynth" target="blank">Explaining Unsynthesizable Specifications For High-Level Robot Behavior</a></li>
       <li><a href="projects.html#zk" target="blank">Epistemic Characterization of Cryptographic Concepts Using Modal Logic</a></li>
@@ -234,9 +234,10 @@ Specifications: A Case Study (Work in Progress)</b>, <i>CyPhy 2014</i>.
 
     <a name="misc"></a>
   <h3>Teaching and Advising</h3>
-  <p>I enjoy teaching and mentoring undergraduates, and have actively sought out relevant opportunities throughout college and graduate school.
+  <p>I enjoy teaching and mentoring undergraduates, and have actively sought out relevant opportunities in and out of the classroom.
 
-  <ul>
+    <ul>
+    <li>Instructor for Caltech Advanced Robotics course (ME 132B) <i>(Spring 2015)</i></li>
     <li>Caltech Undergraduate Student Project Advisor <i>(Fall 2013-present)</i></li>
     <li><a
       href="http://www.engineering.cornell.edu/curie">CURIE Academy Teaching Assistant</a> <i>(July 2012)</i></li>
@@ -285,7 +286,7 @@ I also have a somewhat significant history with College Mock Trial.
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2015 Vasumathi Raman.  Last updated December 22, 2015.</p>
+		<p>&copy; 2015 Vasumathi Raman.  Last updated January 19, 2016.</p>
 	</div>
    </body>
 </html>
