--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-49573602-1', 'caltech.edu');
+  ga('create', 'UA-49573602-1', 'auto');
   ga('send', 'pageview');
 
 </script>
+
 
 </head>
 <body>    
