--- a/index.html
+++ b/index.html
@@ -92,13 +92,16 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
-	 <li> <b>Dec 21: </b>Paper accepted at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
+	  <li> <b>Apr 8: </b>Visiting <a href="http://www.tugraz.at/">TU Graz</a>.
+	  <li> <b>Apr 11: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">ARCH 2016</a> in Vienna, Austria.
+	  <li> <b>Apr 12-14: </b> Attending <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
+	  <li> <b>May 16-21: </b>The <a href = "http://www.fmrchallenge.org/">First Challenge on Formal Methods for Robotics</a> at <a href="http://icra2016.org/">ICRA 2016</a>!
 	</ul>
 	<i>Recent:</i>
 	<ul>
-	   <li> <b>June 23-26: </b> Lecturing on <i>Synthesis for Robotics</i> at the <a href="https://excape.cis.upenn.edu/summer-school.html">ExCAPE Summer School on Synthesis</a>.
-	  <li> <b>Mar 31: </b> Teaching the Caltech <a href="me132b.html">Advanced Robotics</a> course this term.
-	  <li> <b>Mar 15: </b> <span style="font-size:12pt; font-style:italic; color:red">New software! </span><a href="https://github.com/BluSTL/BluSTL/">BluSTL v0.1</a> released.
+	  <li> <b>Feb 7: </b> <span style="font-size:12pt; font-style:italic; color:red">New software! </span><a href="https://github.com/BluSTL/BluSTL/">BluSTL v0.2</a> released.
+	  <li> <b> Dec 21: </b>Paper accepted at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
+	  
 	  <!--
 	  <li> <b>Mar 6: </b><a href="http://absynth2015.github.io/">Workshop</a> accepted at <a href="http://www.roboticsconference.org/">RSS 2015</a> in Rome, Italy.
 	  <li> <b>Apr 14-16: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">HSCC 2015</a> in Seattle, WA.
@@ -287,7 +290,7 @@ I also have a somewhat significant history with College Mock Trial.
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2015 Vasumathi Raman.  Last updated January 19, 2016.</p>
+		<p>&copy; 2015 Vasumathi Raman.  Last updated March 26, 2016.</p>
 	</div>
    </body>
 </html>
