added NFM paper acceptance to news

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
+	  <li> <b>Apr 8: </b>Two papers accepted at <a href="http://crisys.cs.umn.edu/nfm2016/">NFM 2016</a> in Minneapolis, MN.
 	  <li> <b>Apr 8: </b>Visiting <a href="http://www.tugraz.at/">TU Graz</a>.
 	  <li> <b>Apr 11: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">ARCH 2016</a> in Vienna, Austria.
 	  <li> <b>Apr 12-14: </b> Attending <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
