added DiaRY to tools list

--- a/tools.html
+++ b/tools.html
@@ -45,9 +45,13 @@ I currently contribute or have contributed to the following toolboxes.
 
 <p>
 
-      <h3><a href="https://github.com/BluSTL/BluSTL">BluSTL</a> <span style="font-size:12pt; font-style:italic; color:red">New!</span></span></h3>
+      <h3><a href="https://github.com/BluSTL/BluSTL">BluSTL</a> </span></span></h3>
     BluSTL (pronounced "blue steel") is a MATLAB toolkit for automatically generating hybrid controllers from specifications written in Signal Temporal Logic.
+</p>
 
+<p>
+ <h3><a href="https://github.com/shromonag/DiaRY">Diagnosis and Repair for sYnthesis (DiaRY)</a></h3>
+  This MATLAB package contains the implementation of the algorithms described in the paper "Diagnosis and Repair for Synthesis from Signal Temporal Logic", Ghosh et al, HSCC 2016. This file describes the contents of the package, and provides instruction regarding its use.
 </p>
 
 <p>
@@ -68,6 +72,7 @@ I currently contribute or have contributed to the following toolboxes.
   TuLiP is a collection of Python code for automatic synthesis of correct-by-construction embedded control software.
 </p>
 
+
 </table>
 
 <br>
@@ -76,7 +81,7 @@ I currently contribute or have contributed to the following toolboxes.
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2015 Vasumathi Raman.  Last updated December 22, 2015.</p>
+		<p>&copy; 2016 Vasumathi Raman.  Last updated April 16, 2016.</p>
 	</div>
 </div>
 </body>
