--- a/index.html
+++ b/index.html
@@ -150,7 +150,12 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 
 <h3>Conference Publications</h3>
 <ul>
-            <li>S. Ghosh, D. Sadigh, P. Nuzzo, <u>V. Raman</u>, A. Donz{\'e}, A. Sangiovanni-Vincentelli, S. S. Sastry, S. A. Seshia, <b>Diagnosis and Repair for Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2016</i> (to appear).
+	    <li>Y. Wu, <u>V. Raman</u>, S. Lafortune, S. A. Seshia, <b>Obfuscator Synthesis for Privacy and Utility</b>, <i>NFM 2016</i> (to appear).
+	    <a href="">[pdf]</a>
+	    <li>S. Jha, <u>V. Raman</u>, <b>Automated Synthesis of Safe Autonomous Vehicle Control Under Perception Uncertainty</b>, <i>NFM 2016</i> (to appear).
+	    <a href="">[pdf]</a>
+
+            <li>S. Ghosh, D. Sadigh, P. Nuzzo, <u>V. Raman</u>, A. Donz{\'e}, A. Sangiovanni-Vincentelli, S. S. Sastry, S. A. Seshia, <b>Diagnosis and Repair for Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2016</i>.
 	      <a href="">[pdf]</a>
 
             <li>J. DeCastro, J. Alonso-Mora, <u>V. Raman</u>, D. Rus, H. Kress-Gazit, <b>Collision-Free Reactive Mission and Motion Planning for Multi-Robot Systems</b>, <i>ISRR 2015</i>.
