added news of CAV paper acceptance

--- a/index.html
+++ b/index.html
@@ -92,15 +92,16 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
+	  <li> <b>Apr 15: </b>Tool paper on <a href="https://github.com/VerifiableRobotics/slugs">slugs</a> accepted at <a href="http://i-cav.org/2016/">CAV 2016</a> in Toronto, ON.
 	  <li> <b>Apr 8: </b>Two papers accepted at <a href="http://crisys.cs.umn.edu/nfm2016/">NFM 2016</a> in Minneapolis, MN.
-	  <li> <b>Apr 8: </b>Visiting <a href="http://www.tugraz.at/">TU Graz</a>.
-	  <li> <b>Apr 11: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">ARCH 2016</a> in Vienna, Austria.
-	  <li> <b>Apr 12-14: </b> Attending <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
-	  <li> <b>May 16-21: </b>The <a href = "http://www.fmrchallenge.org/">First Challenge on Formal Methods for Robotics</a> at <a href="http://icra2016.org/">ICRA 2016</a>!
+	  <li> <b>May 16-21: </b>The <a href = "http://www.fmrchallenge.org/">First Challenge on Formal Methods for Robotics</a> is happening at <a href="http://icra2016.org/">ICRA 2016</a>!
 	</ul>
 	<i>Recent:</i>
 	<ul>
-	  <li> <b>Feb 7: </b> <span style="font-size:12pt; font-style:italic; color:red">New software! </span><a href="https://github.com/BluSTL/BluSTL/">BluSTL v0.2</a> released.
+	   <li> <b>Apr 12-14: </b> Attending <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
+	   <li> <b>Apr 11: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">ARCH 2016</a> in Vienna, Austria.
+	   <li> <b>Apr 8: </b>Visiting <a href="http://www.tugraz.at/">TU Graz</a>.
+	   <li> <b>Feb 7: </b> <span style="font-size:12pt; font-style:italic; color:red">New software! </span><a href="https://github.com/BluSTL/BluSTL/">BluSTL v0.2</a> released.
 	  <li> <b> Dec 21: </b>Paper accepted at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
 	  
 	  <!--
@@ -150,6 +151,8 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 
 <h3>Conference Publications</h3>
 <ul>
+            <li>R. Ehlers, <u>V. Raman</u>, <b>Slugs: Extensible GR(1) Synthesis (Tool Paper)</b>, <i>CAV 2016</i> (to appear).
+	      <a href="">[pdf]</a>
 	    <li>Y. Wu, <u>V. Raman</u>, S. Lafortune, S. A. Seshia, <b>Obfuscator Synthesis for Privacy and Utility</b>, <i>NFM 2016</i> (to appear).
 	    <a href="">[pdf]</a>
 	    <li>S. Jha, <u>V. Raman</u>, <b>Automated Synthesis of Safe Autonomous Vehicle Control Under Perception Uncertainty</b>, <i>NFM 2016</i> (to appear).
