corrected accent on Alex's name

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 	    <li>S. Jha, <u>V. Raman</u>, <b>Automated Synthesis of Safe Autonomous Vehicle Control Under Perception Uncertainty</b>, <i>NFM 2016</i> (to appear).
 	    <a href="">[pdf]</a>
 
-            <li>S. Ghosh, D. Sadigh, P. Nuzzo, <u>V. Raman</u>, A. Donz{\'e}, A. Sangiovanni-Vincentelli, S. S. Sastry, S. A. Seshia, <b>Diagnosis and Repair for Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2016</i>.
+            <li>S. Ghosh, D. Sadigh, P. Nuzzo, <u>V. Raman</u>, A. Donz&eacute;, A. Sangiovanni-Vincentelli, S. S. Sastry, S. A. Seshia, <b>Diagnosis and Repair for Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2016</i>.
 	      <a href="papers/vraman_hscc_16.pdf">[pdf]</a>
 
             <li>J. DeCastro, J. Alonso-Mora, <u>V. Raman</u>, D. Rus, H. Kress-Gazit, <b>Collision-Free Reactive Mission and Motion Planning for Multi-Robot Systems</b>, <i>ISRR 2015</i>.
