broke up conference publications list by year

--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
   </ul>
 
 <h3>Conference Publications</h3>
-<ul>
+<h4>2016</h4>
+<ul id="2016">
+  
             <li>R. Ehlers, <u>V. Raman</u>, <b>Slugs: Extensible GR(1) Synthesis (Tool Paper)</b>, <i>CAV 2016</i> (to appear).
 	      <a href="">[pdf]</a>
 	    <li>Y. Wu, <u>V. Raman</u>, S. Lafortune, S. A. Seshia, <b>Obfuscator Synthesis for Privacy and Utility</b>, <i>NFM 2016</i> (to appear).
@@ -160,6 +162,10 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 
             <li>S. Ghosh, D. Sadigh, P. Nuzzo, <u>V. Raman</u>, A. Donz&eacute;, A. Sangiovanni-Vincentelli, S. S. Sastry, S. A. Seshia, <b>Diagnosis and Repair for Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2016</i>.
 	      <a href="papers/vraman_hscc_16.pdf">[pdf]</a>
+
+	    </ul>
+<h4>2015</h4>
+<ul id="2015">
 
             <li>J. DeCastro, J. Alonso-Mora, <u>V. Raman</u>, D. Rus, H. Kress-Gazit, <b>Collision-Free Reactive Mission and Motion Planning for Multi-Robot Systems</b>, <i>ISRR 2015</i>.
 	      <a href="papers/vraman_isrr_15.pdf">[pdf]</a>
@@ -179,6 +185,11 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
         <li><u>V. Raman</u>, A. Donz&eacute;, D. Sadigh, R. M. Murray, S. A. Seshia, <b>Reactive Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2015</i>.
 	<a href="papers/vraman_hscc_15.pdf">[pdf]</a>
 	<a href="talks/vraman_talk_hscc15.pdf">[slides]</a>
+
+	</ul>
+
+<h4>2014</h4>
+<ul id="2014">
 	
 	<li><u>V. Raman</u>, A. Donz&eacute;, M. Maasoumy, R. M. Murray, A. Sangiovanni-Vincentelli, S. A. Seshia, <b>Model Predictive Control with Signal Temporal Logic Specifications</b>, <i>CDC 2014</i>.
 	<a href="papers/vraman_cdc_14.pdf">[pdf]</a>
@@ -194,7 +205,12 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 	<a href="papers/vraman_icra_14.pdf">[pdf]</a>
 	<a href="talks/vraman_talk_icra14.pdf">[slides]</a> 
 
-	
+
+	</ul>
+
+<h4>2013</h4>
+<ul id="2013">
+  
 	<li><u>V. Raman</u>, H. Kress-Gazit, <b>Toward Minimal Explanations of Unsynthesizability for High-Level Robot Behaviors</b>, <i>IROS 2013</i>.
 	<a href="papers/vraman_iros_13.pdf">[pdf]</a>
 	<a href="talks/vraman_talk_iros13.pdf">[slides]</a> 
@@ -207,6 +223,11 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
       <li><u>V. Raman</u>, N. Piterman, H. Kress-Gazit, <b>Provably Correct Continuous Control for High-Level Robot Behaviors with Actions of Arbitrary Execution Durations</b>, <i>ICRA 2013</i>.  
 	<a href="papers/vraman_icra_13.pdf">[pdf]</a>
 
+	</ul>
+
+<h4>2012</h4>
+<ul id="2012">
+
    <li><u>V. Raman</u>, C. Finucane, H. Kress-Gazit, <b>Temporal Logic Robot Mission Planning for Slow and Fast Actions</b>, <i>IROS 2012</i>.  
 	<a href="papers/vraman_iros12_FS.pdf">[pdf]</a>
 	<a href="talks/vraman_talk_irosFS.pdf">[slides]</a>
@@ -218,7 +239,12 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
     <li><u>V. Raman</u>, H. Kress-Gazit, <b>Automated feedback for unachievable high-level robot behaviors</b>, <i>ICRA 2012</i>.
 	<a href="papers/vraman_icra_12.pdf">[pdf]</a> |
 	<a href="talks/vraman_talk_icra12.pdf">[slides]</a> 
-	<a href="talks/vraman_shortICRA_vasu_final.mp4">[video]</a> 
+	<a href="talks/vraman_shortICRA_vasu_final.mp4">[video]</a>
+
+	</ul>
+
+<h4>2011 and prior</h4>
+<ul id="2011 and prior">
 
     <li><u>V. Raman</u>, H. Kress-Gazit, <b>Analyzing Unsynthesizable Specifications for High-Level Robot Behavior Using LTLMoP</b>, <i>CAV 2011</i>.     
 	<a href="papers/vraman_cav_11.pdf">[pdf]</a>
