added FORMATS 2016 paper

--- a/index.html
+++ b/index.html
@@ -92,19 +92,21 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
+	  <li> <b>June 13: </b>Paper accepted at <a href="http://formats2016.lsv.fr">FORMATS 2016</a> in Qu&eacutebec City, ON.
 	  <li> <b>Apr 15: </b>Tool paper on <a href="https://github.com/VerifiableRobotics/slugs">slugs</a> accepted at <a href="http://i-cav.org/2016/">CAV 2016</a> in Toronto, ON.
-	  <li> <b>Apr 8: </b>Two papers accepted at <a href="http://crisys.cs.umn.edu/nfm2016/">NFM 2016</a> in Minneapolis, MN.
-	  <li> <b>May 16-21: </b>The <a href = "http://www.fmrchallenge.org/">First Challenge on Formal Methods for Robotics</a> is happening at <a href="http://icra2016.org/">ICRA 2016</a>!
 	</ul>
 	<i>Recent:</i>
 	<ul>
-	   <li> <b>Apr 12-14: </b> Attending <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
-	   <li> <b>Apr 11: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">ARCH 2016</a> in Vienna, Austria.
+	   <li> <b>June 7-9: </b>Two papers presented at <a href="http://crisys.cs.umn.edu/nfm2016/">NFM 2016</a> in Minneapolis, MN.
+	   <li> <b>May 16-21: </b>The <a href = "http://www.fmrchallenge.org/">First Challenge on Formal Methods for Robotics</a> was held at <a href="http://icra2016.org/">ICRA 2016</a>!
+	   <li> <b>Apr 12-14: </b> Paper presented at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
+	   <li> <b>Apr 11: </b>Presented at <a href="http://ljk.imag.fr/hscc2015/">ARCH 2016</a> in Vienna, Austria.
 	   <li> <b>Apr 8: </b>Visiting <a href="http://www.tugraz.at/">TU Graz</a>.
 	   <li> <b>Feb 7: </b> <span style="font-size:12pt; font-style:italic; color:red">New software! </span><a href="https://github.com/BluSTL/BluSTL/">BluSTL v0.2</a> released.
-	  <li> <b> Dec 21: </b>Paper accepted at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
-	  
+	   
 	  <!--
+           <li> <b> Dec 21: </b>Paper accepted at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
+	  
 	  <li> <b>Mar 6: </b><a href="http://absynth2015.github.io/">Workshop</a> accepted at <a href="http://www.roboticsconference.org/">RSS 2015</a> in Rome, Italy.
 	  <li> <b>Apr 14-16: </b>Presenting at <a href="http://ljk.imag.fr/hscc2015/">HSCC 2015</a> in Seattle, WA.
 	  <li> <b>Apr 13: </b> Gave a highlight talk at the <a href="http://cps-vo.org/group/CPSEarlyCareerInvestigators2015/">NSF Early-Career Investigators Workshop on CPS & Smart City</a>.
@@ -153,7 +155,9 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 <h4>2016</h4>
 <ul id="2016">
   
-            <li>R. Ehlers, <u>V. Raman</u>, <b>Slugs: Extensible GR(1) Synthesis (Tool Paper)</b>, <i>CAV 2016</i> (to appear).
+            <li>S. Jha, <u>V. Raman</u>, <b>Towards Automated Synthesis of Stochastic Linear Hybrid Systems Controllers</b>, <i>FORMATS 2016</i> (to appear).
+	      <a href="">[pdf]</a>
+	    <li>R. Ehlers, <u>V. Raman</u>, <b>Slugs: Extensible GR(1) Synthesis (Tool Paper)</b>, <i>CAV 2016</i> (to appear).
 	      <a href="">[pdf]</a>
 	    <li>Y. Wu, <u>V. Raman</u>, S. Lafortune, S. A. Seshia, <b>Obfuscator Synthesis for Privacy and Utility</b>, <i>NFM 2016</i> (to appear).
 	    <a href="">[pdf]</a>
