ON -> QC for Quebec

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
-	  <li> <b>June 13: </b>Paper accepted at <a href="http://formats2016.lsv.fr">FORMATS 2016</a> in Qu&eacutebec City, ON.
+	  <li> <b>June 13: </b>Paper accepted at <a href="http://formats2016.lsv.fr">FORMATS 2016</a> in Qu&eacutebec City, QC.
 	  <li> <b>Apr 15: </b>Tool paper on <a href="https://github.com/VerifiableRobotics/slugs">slugs</a> accepted at <a href="http://i-cav.org/2016/">CAV 2016</a> in Toronto, ON.
 	</ul>
 	<i>Recent:</i>
