update home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
   
 <title>Vasu Raman</title>
-<meta name="Vasu Raman is a Senior Scientist at UTRC." content="" />
+<meta name="Vasu Raman is a Robotics Researcher based in San Francisco." content="" />
 <meta name="google-site-verification" content="-7qZnnAWS5Dp4S7IMyEi_Xs3WGrOBs9PqF0z1d5eYks" />
 
 <link href="style.css" rel="stylesheet" type="text/css" />
@@ -52,17 +52,17 @@
   <div id="content">
   <table cellpadding=8>
     <tr>      
-      <td width="30%" align="center"><img src="vasu_resize.jpg"></td>
+      <td width="30%" align="center" style="vertical-align: top;"><img src="vasu_resize.jpg"></td>
       <td>
-	 I am a Senior Scientist at the United Technologies Research Center in Berkeley, CA. I was previously a <a href="http://www.cms.caltech.edu/">Computing and Mathematical Sciences</a> postdoctoral scholar at the <a href="http://www.caltech.edu/">California Institute of Technology</a>,
+	 I am a roboticist based in the San Francisco Bay Area. Previously, I was a Senior Scientist at the the United Technologies Research Center in Berkeley, CA, and a <a href="http://www.cms.caltech.edu/">Computing and Mathematical Sciences</a> postdoctoral scholar at the <a href="http://www.caltech.edu/">California Institute of Technology</a>,
 	 where I worked with <a href="http://www.cds.caltech.edu/~murray/">Richard Murray</a> and <a href="http://www.eecs.berkeley.edu/~sseshia/">Sanjit Seshia</a>.
-	 <p>
+	 <p><p>
 	 <!--My research explores algorithmic methods for designing and controlling autonomous systems, combining ideas from hybrid systems and software verification
 	 to guarantee correctness with respect to a formal specification. I focus on safety-critical
 	 applications involving cyber-physical systems performing complex tasks in adversarial environments, often interacting with a variety of human users.
 	 I draw on technical and creative perspectives from hybrid systems, robotics, control and game theory.-->
-	 My research explores algorithmic methods for designing and controlling autonomous systems, guaranteeing correctness with respect to formal specifications. I focus on safety-critical systems performing complex tasks in adversarial environments, interacting with a variety of agents. I draw on technical and creative perspectives from formal methods for software verification, hybrid systems, robotics, control and game theory.
-	 
+	 My research explores algorithmic methods for designing and controlling autonomous systems, guaranteeing correctness with respect to formal specifications. I focus on safety-critical systems performing complex tasks in adversarial environments, interacting with a variety of agents. I draw on technical and creative perspectives from formal methods for software verification, hybrid systems, robotics, control and game theory. 
+	 	 
 	 <p>I earned a Ph.D. in 2013 from the <a href="http://www.cs.cornell.edu/">Department of Computer Science</a> at
 	 <a href="http://www.cornell.edu/">Cornell University</a>, where I was advised by <a href="http://verifiablerobotics.com/">Hadas Kress-Gazit</a>
 	 and affiliated with the <a href="http://cornell-asl.org">Autonomous Systems Lab</a> and the
@@ -92,6 +92,7 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
+	 <li> <b>July 9: </b>Paper accepted at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD16/index.shtml">FMCAD 2016</a> in Mountain View, CA.
 	  <li> <b>June 13: </b>Paper accepted at <a href="http://formats2016.lsv.fr">FORMATS 2016</a> in Qu&eacutebec City, QC.
 	  <li> <b>Apr 15: </b>Tool paper on <a href="https://github.com/VerifiableRobotics/slugs">slugs</a> accepted at <a href="http://i-cav.org/2016/">CAV 2016</a> in Toronto, ON.
 	</ul>
@@ -155,7 +156,9 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 <h4>2016</h4>
 <ul id="2016">
   
-            <li>S. Jha, <u>V. Raman</u>, <b>Towards Automated Synthesis of Stochastic Linear Hybrid Systems Controllers</b>, <i>FORMATS 2016</i> (to appear).
+            <li>S. Jha, <u>V. Raman</u>, S. A. Seshia, <b>On ∃ ∀ ∃! Solving: A Case Study on Automated Synthesis of Magic Card Tricks</b>, <i>FMCAD 2016</i> (to appear).
+
+	    <li>S. Jha, <u>V. Raman</u>, <b>Towards Automated Synthesis of Stochastic Linear Hybrid Systems Controllers</b>, <i>FORMATS 2016</i> (to appear).
 	      <a href="">[pdf]</a>
 	    <li>R. Ehlers, <u>V. Raman</u>, <b>Slugs: Extensible GR(1) Synthesis (Tool Paper)</b>, <i>CAV 2016</i> (to appear).
 	      <a href="">[pdf]</a>
@@ -329,7 +332,7 @@ I also have a somewhat significant history with College Mock Trial.
   </p>
 	</div>
 	<div id="footer">
-		<p>&copy; 2015 Vasumathi Raman.  Last updated March 26, 2016.</p>
+		<p>&copy; 2015 Vasumathi Raman.  Last updated September 23, 2016.</p>
 	</div>
    </body>
 </html>
