--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	 to guarantee correctness with respect to a formal specification. I focus on safety-critical
 	 applications involving cyber-physical systems performing complex tasks in adversarial environments, often interacting with a variety of human users.
 	 I draw on technical and creative perspectives from hybrid systems, robotics, control and game theory.-->
-	 My research explores algorithmic methods for designing and controlling autonomous systems, guaranteeing correctness with respect to formal specifications. I focus on safety-critical systems performing complex tasks in adversarial environments, interacting with a variety of agents. I draw on technical and creative perspectives from formal methods for software verification, hybrid systems, robotics, control and game theory. 
+	 I am interested in algorithms for designing and controlling autonomous systems, guaranteeing correctness with respect to formal specifications. I focus on safety-critical systems performing complex tasks in adversarial environments, interacting with a variety of agents. I draw on technical and creative perspectives from formal methods for software verification, hybrid systems, robotics, control and game theory. 
 	 	 
 	 <p>I earned a Ph.D. in 2013 from the <a href="http://www.cs.cornell.edu/">Department of Computer Science</a> at
 	 <a href="http://www.cornell.edu/">Cornell University</a>, where I was advised by <a href="http://verifiablerobotics.com/">Hadas Kress-Gazit</a>
@@ -92,12 +92,16 @@
       <div id="news">
 	<h3>News</h3>
 	<ul>
-	 <li> <b>July 9: </b>Paper accepted at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD16/index.shtml">FMCAD 2016</a> in Mountain View, CA.
-	  <li> <b>June 13: </b>Paper accepted at <a href="http://formats2016.lsv.fr">FORMATS 2016</a> in Qu&eacutebec City, QC.
-	  <li> <b>Apr 15: </b>Tool paper on <a href="https://github.com/VerifiableRobotics/slugs">slugs</a> accepted at <a href="http://i-cav.org/2016/">CAV 2016</a> in Toronto, ON.
+	  <li> <b>Feb 12-17: </b>Attending Dagstuhl Seminar on <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=17071">Comnputer-Assisted Engineering for Robotics</a>.
+	  <li> <b>Feb 7: </b>Paper accepted at <a href="https://ti.arc.nasa.gov/events/nfm-2017/">NFM 2017</a> in Moffett Field, CA.
 	</ul>
 	<i>Recent:</i>
 	<ul>
+	  
+	  <!--
+<li> <b>July 9: </b>Paper accepted at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD16/index.shtml">FMCAD 2016</a> in Mountain View, CA.
+	  <li> <b>June 13: </b>Paper accepted at <a href="http://formats2016.lsv.fr">FORMATS 2016</a> in Qu&eacutebec City, QC.
+	  <li> <b>Apr 15: </b>Tool paper on <a href="https://github.com/VerifiableRobotics/slugs">slugs</a> accepted at <a href="http://i-cav.org/2016/">CAV 2016</a> in Toronto, ON.
 	   <li> <b>June 7-9: </b>Two papers presented at <a href="http://crisys.cs.umn.edu/nfm2016/">NFM 2016</a> in Minneapolis, MN.
 	   <li> <b>May 16-21: </b>The <a href = "http://www.fmrchallenge.org/">First Challenge on Formal Methods for Robotics</a> was held at <a href="http://icra2016.org/">ICRA 2016</a>!
 	   <li> <b>Apr 12-14: </b> Paper presented at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
@@ -105,7 +109,6 @@
 	   <li> <b>Apr 8: </b>Visiting <a href="http://www.tugraz.at/">TU Graz</a>.
 	   <li> <b>Feb 7: </b> <span style="font-size:12pt; font-style:italic; color:red">New software! </span><a href="https://github.com/BluSTL/BluSTL/">BluSTL v0.2</a> released.
 	   
-	  <!--
            <li> <b> Dec 21: </b>Paper accepted at <a href="http://www.cs.ox.ac.uk/conferences/hscc2016/">HSCC 2016</a> in Vienna, Austria.
 	  
 	  <li> <b>Mar 6: </b><a href="http://absynth2015.github.io/">Workshop</a> accepted at <a href="http://www.roboticsconference.org/">RSS 2015</a> in Rome, Italy.
@@ -155,16 +158,16 @@ Synthesized High-Level Robot Control</b>, <i>IEEE Transactions on Robotics</i>, 
 <h3>Conference Publications</h3>
 <h4>2016</h4>
 <ul id="2016">
-  
-            <li>S. Jha, <u>V. Raman</u>, S. A. Seshia, <b>On ∃ ∀ ∃! Solving: A Case Study on Automated Synthesis of Magic Card Tricks</b>, <i>FMCAD 2016</i> (to appear).
+            <li>S. Jha, <u>V. Raman</u>, T. Sahai, A. Pinto, M. Francis, <b>On Learning Sparse Boolean Formulae For Explaining AI Decisions</b>, <i>NFM 2017</i> (to appear).
+            <li>S. Jha, <u>V. Raman</u>, S. A. Seshia, <b>On ∃ ∀ ∃! Solving: A Case Study on Automated Synthesis of Magic Card Tricks</b>, <i>FMCAD 2016</i>.
 
-	    <li>S. Jha, <u>V. Raman</u>, <b>Towards Automated Synthesis of Stochastic Linear Hybrid Systems Controllers</b>, <i>FORMATS 2016</i> (to appear).
+	    <li>S. Jha, <u>V. Raman</u>, <b>Towards Automated Synthesis of Stochastic Linear Hybrid Systems Controllers</b>, <i>FORMATS 2016</i>.
 	      <a href="">[pdf]</a>
-	    <li>R. Ehlers, <u>V. Raman</u>, <b>Slugs: Extensible GR(1) Synthesis (Tool Paper)</b>, <i>CAV 2016</i> (to appear).
+	    <li>R. Ehlers, <u>V. Raman</u>, <b>Slugs: Extensible GR(1) Synthesis (Tool Paper)</b>, <i>CAV 2016</i>.
 	      <a href="">[pdf]</a>
-	    <li>Y. Wu, <u>V. Raman</u>, S. Lafortune, S. A. Seshia, <b>Obfuscator Synthesis for Privacy and Utility</b>, <i>NFM 2016</i> (to appear).
+	    <li>Y. Wu, <u>V. Raman</u>, S. Lafortune, S. A. Seshia, <b>Obfuscator Synthesis for Privacy and Utility</b>, <i>NFM 2016</i>.
 	    <a href="">[pdf]</a>
-	    <li>S. Jha, <u>V. Raman</u>, <b>Automated Synthesis of Safe Autonomous Vehicle Control Under Perception Uncertainty</b>, <i>NFM 2016</i> (to appear).
+	    <li>S. Jha, <u>V. Raman</u>, <b>Automated Synthesis of Safe Autonomous Vehicle Control Under Perception Uncertainty</b>, <i>NFM 2016</i>.
 	    <a href="">[pdf]</a>
 
             <li>S. Ghosh, D. Sadigh, P. Nuzzo, <u>V. Raman</u>, A. Donz&eacute;, A. Sangiovanni-Vincentelli, S. S. Sastry, S. A. Seshia, <b>Diagnosis and Repair for Synthesis from Signal Temporal Logic Specifications</b>, <i>HSCC 2016</i>.
