Add links to Twitter and LinkedIn profiles

--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
     <table border=0 width=100%>
       <tr>
         <td><h1><a href="index.html">Vasu Raman</a></h1></td>
+
+
+   
 	   <td align="right">
-		<b><font size="6"><a href="vraman_CV.pdf"target="blank">[CV]</a></font></b>
+		
 		[vasumathi.raman AT gmail]
+		
+		<p>
+		  <b><font size="5"><a href="vraman_CV.pdf"target="blank"><img src="figures/cv_logo.png" height=25></a></font></b>
+		  <a href="http://twitter.com/likeavass" target="blank"><img src="figures/twitter_logo.svg" width=25></a>
+		  <a href="https://www.linkedin.com/in/vasumathi-raman/" target="blank"><img src="figures/linkedin_logo.png" width=25></a>
 	   </td>
       </tr>
     </table>
@@ -97,6 +105,7 @@
 	</ul>
 	<i>Recent:</i>
 	<ul>
+	  <lt> <b>Aug 2016: </b> With <a href="">Yasser Shoukry</a> and <a href=>Min Kyung Lee  his collaborators recieved a $200,000 NSF EAGER Grant from the Smart and Connected Community (S&CC) program to investigate Socially Responsible Smart Cities. The UCLA/CMU team led by Dr. Shoukry aim to build IoT solutions that help the quality of life of underserved populations.
 	  
 	  <!--
 <li> <b>July 9: </b>Paper accepted at <a href="http://www.cs.utexas.edu/users/hunt/FMCAD/FMCAD16/index.shtml">FMCAD 2016</a> in Mountain View, CA.
