--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,13 @@
       <tr>
         <td><h1><a href="index.html">Vasu Raman</a></h1></td>
 	<td align="right">
-	   <b><font size="6"><a href="vraman_CV.pdf"target="blank">[CV]</a></font></b>
+		
 		[vasumathi.raman AT gmail]
+		
+		<p>
+		  <b><font size="5"><a href="vraman_CV.pdf"target="blank"><img src="figures/cv_logo.png" height=25></a></font></b>
+		  <a href="http://twitter.com/likeavass" target="blank"><img src="figures/twitter_logo.svg" width=25></a>
+		  <a href="https://www.linkedin.com/in/vasumathi-raman/" target="blank"><img src="figures/linkedin_logo.png" width=25></a>
 	 </td>
       </tr>
     </table>
